# HomeSer

./: .env.example  .flake8  .gitignore  HomeSer.postman_collection.json  LICENSE  README.md  __init__.py  bug_tracking.md  build.sh  build_files.bat  build_files.sh  cleanup_log.txt  critical_cleanup.py  lint.bat  lint.sh  logs_result.json  manage.py  package-lock.json  package.json  progress.json  progress.md  progress.txt  prompt.txt  pyproject.toml  requirements.txt  research.md  strategy_document.md  tailwind.config.js  test_vercel.json  vercel-build.sh  vercel-setup.sh  vercel.json
.github/workflows/: ci.yml
HomeSer/: README.md  __init__.py  admin.py  api_urls.py  asgi.py  celery.py  decorators.py  forms.py  health_check.py  jwt_utils.py  middleware.py  models.py  permissions.py  serializers.py  settings.py  tasks.py  tokens.py  urls.py  views.py  web_urls.py  wsgi.py
HomeSer/migrations/: 0001_initial.py  0002_alter_order_created_at_alter_order_status_and_more.py  0002_alter_order_status.py  0003_alter_user_is_active.py  0003_alter_user_options_alter_review_rating_and_more.py  0004_rename_homeser_car_user_id_64a233_idx_cart_user_idx_and_more.py  0005_alter_user_options_remove_cart_cart_user_idx_and_more.py  0006_alter_user_options_alter_cartitem_unique_together_and_more.py
HomeSer/settings/: base.py  development.py  production.py
api/: index.py
static/css/: animations.css  input.css  output.css  styles.css
templates/: base.html  cart.html  edit_profile.html  home.html  orders.html  profile.html  service_detail.html  services.html
tests/: test_models.py
(+30 files in other folders)
