[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "HomeSer"
version = "0.1.0"
description = "A Household Service Providing Platform"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
(
  migrations/.*\.py$
  | __pycache__/
  | \.git/
  | \.tox/
  | \.venv/
  | env/
  | venv/
  | build/
  | dist/
  | \.eggs/
  | \.mypy_cache/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_django = "django"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["*/migrations/*", "*/__pycache__/*", "*/.git/*", "*/.tox/*", "*/.venv/*", "*/venv/*", "*/env/*", "*/build/*", "*/dist/*", "*/.eggs/*", "*/.mypy_cache/*"]

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
django_find_project = false
DJANGO_SETTINGS_MODULE = "HomeSer.settings"